argocd/apps/adguard-home/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguardhome
  template:
    metadata:
      labels:
        app: adguardhome
    spec:
      containers:
        - name: adguardhome
          image: adguard/adguardhome
          volumeMounts:
            - name: adguardhome-storage
              mountPath: /opt/adguardhome/work
            - name: adguardhome-storage
              mountPath: /opt/adguardhome/conf
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 67
              protocol: UDP
            - containerPort: 68
              protocol: UDP
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
            - containerPort: 443
              protocol: UDP
            - containerPort: 3000
              protocol: TCP
            - containerPort: 853
              protocol: TCP
            - containerPort: 784
              protocol: UDP
            - containerPort: 853
              protocol: UDP
            - containerPort: 8853
              protocol: UDP
            - containerPort: 5443
              protocol: TCP
            - containerPort: 5443
              protocol: UDP
      volumes:
        - name: adguardhome-storage
          persistentVolumeClaim:
            claimName: adguardhome-storage-pvc
