argocd/apps/adguard-home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - adguard.devsoul.net
      secretName: wildcard-cert
  ingressClassName: nginx
  rules:
  - host: adguard.devsoul.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguardhome
            port:
              number: 80
